fix: correct wrong fontFamliy variable

--- a/src/components/anker/anker.scss
+++ b/src/components/anker/anker.scss
@@ -3,7 +3,7 @@
 
 .cAnker {
   position: relative;
-  font-family: $fontFamily;
+  font-family: $cs-fontFamily;
   font-size: inherit;
   font-weight: $fontWeight;
   color: $color-darkGreen;
